# target_finder_toolkit

./: .gitignore  EXPERIMENT_CHANGELOG.md  MANIFEST.in  README.md  control_panel_config.json  environment-macos.yml  environment.yml  pyproject.toml  setup.py
experiment_design/: conditions.csv
logs/: 20260408_135307_targetfinder.jsonl  20260408_142550_targetfinder.jsonl  20260408_143750_targetfinder.jsonl
qualitative_logs/: P01_20260619_144951_normal_mouse_baseline.jsonl  P01_20260619_150702_normal_mouse_baseline.jsonl  P02_20260623_110226_normal_mouse_baseline.jsonl  P02_20260623_110819_normal_mouse_baseline.jsonl  P02_20260623_110829_normal_mouse_baseline.jsonl  P03_20260706_123450_qualitative_sequence_semantic_runtime.jsonl  P03_20260706_123450_qualitative_sequence_standard_avec_filter_runtime.jsonl  P04_20260706_154011_qualitative_sequence.jsonl  P04_20260706_154048_qualitative_sequence_ninja_runtime.jsonl  P04_20260706_154048_qualitative_sequence_semantic_runtime.jsonl  P04_20260706_154048_qualitative_sequence_standard_avec_filter_runtime.jsonl
target_finder_toolkit/: annotation_detector.py  bubblecursor.py  calibration_diagnostics.py  comparative_session.py  control_panel.py  dynaspot.py  experimental_session.py  experimental_task.py  eye_calibration.py  filters.py  fitts_distractors_task.py  inter_task_pause.py  logging_utils.py  mouse_utils.py  ninjacursors.py  postprocess.py  qualitative_baseline.py  rakecursor.py  semanticpointing.py  standard_mouse.py  (+8 more)
target_finder_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+74 files in other folders)
