[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "target-finder-toolkit"
version = "0.1.3"
description = "Widget detection and interaction techniques: Bubble Cursor and Semantic Pointing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "numpy",
  "opencv-python",
  "mss",
  "ultralytics",
  "PyQt6",
  "pyautogui",
  "pynput",
  "OneEuroFilter",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
keywords = ["yolo", "gui", "widgets", "detection", "hci"]

[project.scripts]
targetfinder-gui = "target_finder_toolkit.targetfinder:main"
bubblecursor     = "target_finder_toolkit.bubblecursor:main"
semanticpointing = "target_finder_toolkit.semanticpointing:main"
dynaspot         = "target_finder_toolkit.dynaspot:main"
rakecursor       = "target_finder_toolkit.rakecursor:main"

[project.urls]
Repository = "https://anonymous.4open.science/r/target_finder_toolkit-9A81/README.md"
Documentation = "https://zingy-biscuit-a4bc5c.netlify.app/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"target_finder_toolkit" = ["*.pt"]

[tool.setuptools.packages.find]
where = ["."]
include = ["target_finder_toolkit*"]
